--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jet-automation-landing",
+  "name": "temp-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,36 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.0",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@react-email/components": "^0.0.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.294.0",
-    "motion": "^10.16.4",
-    "next": "14.0.3",
+    "\"react-dom\"": "18.2.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@react-email/components": "^0.0.40",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.11.0",
+    "lucide-react": "^0.508.0",
+    "motion": "^3.2.4",
+    "motion-dom": "^12.11.0",
+    "next": "15.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "resend": "^2.0.0",
-    "tailwind-merge": "^2.1.0",
-    "zod": "^3.22.4"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "resend": "^4.5.1",
+    "tailwind-merge": "^3.2.0",
+    "vercel": "^41.7.4",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^20.9.4",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.3",
-    "npm-check-updates": "^16.14.6",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "\"@types/react-dom\"": "^18",
+    "\"@types/react\"": "^18",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "npm-check-updates": "^18.0.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5"
   },
   "engines": {
     "node": "18.x"
