--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # misc
 .DS_Store
 *.pem
+.env.local
 
 # debug
 npm-debug.log*
@@ -24,7 +25,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
 
 # vercel
 .vercel
@@ -33,6 +33,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# temp directories
+# temporary directories
 /temp-project
+/clean-v2
 /temp-push
+/backup 
